# glome

./: README.md
GlomeTrace/: GlomeTrace.cabal  LICENSE  README.txt
GlomeTrace/Data/Glome/: Bih.hs  Bound.hs  Box.hs  Clr.hs  Cone.hs  Csg.hs  Mesh.hs  Plane.hs  Scene.hs  Shader.hs  Solid.hs  Spd.hs  Sphere.hs  Tex.hs  Trace.hs  Triangle.hs
GlomeVec/: GlomeVec.cabal  README.txt
GlomeVec/Data/Glome/: Texture.hs  Vec.hs
GlomeView/: Glome.hs  GlomeView.cabal  README.txt  TestScene.hs
